--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Ram & Antara getting hitched!</title>
+    <title>Gerhard & Tarryn Trou!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Ram & Antara getting hitched">
+    <meta property="og:title" content="Gerhard & Tarryn Trou">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
@@ -73,7 +73,7 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">How we met</a></li>
+                            <li><a href="#intro">Ons Storie</a></li>
                             <li><a href="#events">Events</a></li>
                             <li><a href="#instagram">Instagram</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
@@ -95,10 +95,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <!--<h1>Ram and Antara</h1>-->
                     <img src="img/logo-lg.png">
-                    <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
-                    <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
         </div>
@@ -116,10 +113,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
-                <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
-                    it.</p>
-                <div class="share-bar"></div>
+                <h3>Ons trou</h3>
+                <p>16<sup>de</sup> November 2024.</p>
+                <p>Ons is opgewonde om hierdie spesiale dag saam te vier</p>
             </div>
         </div>
     </div>
@@ -129,19 +125,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">How we met</h3>
+                <h3 class="header">Ons Storie</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
-                    her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me in
-                    the class. She started to take notice of me and no matter how boring the lecture was, we never
-                    missed a class after that. After a good few months I finally plucked up the courage to ask her out
-                    and the rest is history :)
+                    Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n fliek. Ons het in die reën gedans, met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het.
+                    
+                    Na meer as vyf jaar saam, is ons steeds net so verlief soos daardie eerste dag wat Gerhard met kerse en 'n ukulele liefdes liedjie Tarryn uit gevra het. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielmaats is, en dit vir altyd sal wees.
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
@@ -492,7 +485,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p>Gemaak deur Gerhard met baie <span class="fa fa-heart pulse2"></span> vir Tarryn</p>
             </div>
         </div>
     </div>
