--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>
 </section>
 
-<section id="invitation" class="section-padding">
+<!-- <section id="invitation" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -119,7 +119,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <section id="intro">
     <div class="container">
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.png" class="wp1" style="width: auto; height: auto; position: relative; top: -100px; left: -50px;"></div>
             <div class="col-md-6">
                 <p>
                     Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n fliek. Ons het in die reën gedans, met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het.
@@ -137,11 +137,11 @@
                     Na meer as vyf jaar saam, is ons steeds net so verlief soos daardie eerste dag wat Gerhard met kerse en 'n ukulele liefdes liedjie Tarryn uit gevra het. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielmaats is, en dit vir altyd sal wees.
                 </p>
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.png" class="wp2" style="width: 150%; height: 150%; position: relative; top: -100px; left: -50px;"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.png" class="wp8" style="width: auto; height: auto; position: relative; top: -100px; left: -50px;"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.png" class="wp9" style="width: 150%; height: 150%; position: relative; top: -100px; left: -50px;"></div>
         </div>
     </div>
 </section>
@@ -251,24 +251,6 @@
 
 </section>
 
-<section id="instagram" class="section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h3>A picture is worth a thousand words!</h3>
-                <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
-                </p>
-            </div>
-        </div>
-        <div class="row section-border wp7">
-            <div class="col-md-4 col-md-offset-4">
-                <img src="img/iphone_instagram.jpg">
-            </div>
-        </div>
-    </div>
-</section>
-
 <section id="eng-pics" class="section-padding">
     <div class="container-fluid">
         <div class="row">
@@ -354,13 +336,40 @@
     </div>-->
 </section>
 
+<style>
+    #video-bg {
+        position: relative;
+        overflow: hidden;
+    }
+
+    #video video {
+        width: 100%;
+        max-height: 300px;
+        object-fit: cover; /* Ensures the video covers the entire container without distortion */
+    }
+
+    #video-content {
+        position: absolute;
+        top: 50%;          /* Centers the content vertically */
+        left: 50%;         /* Centers the content horizontally */
+        transform: translate(-50%, -50%); /* Corrects the centering */
+        color: white;      /* Makes the text visible over the video */
+        text-align: center;
+        background: rgba(0, 0, 0, 0.5); /* Optional: Adds a semi-transparent background for better readability */
+        padding: 20px;
+        border-radius: 8px; /* Optional: Adds rounded corners to the background */
+    }
+</style>
+
 <section id="video-bg" class="hidden-sm hidden-xs">
-    <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/9giqL1H6yRs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
-    </div>
+    <div id="video">
+        <video src="venue.mp4" muted autoplay type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>  
     <div id="video-content">
-        <h5>Kolkata</h5>
-        <p>City of joy</p>
+        <h5>Candlewoods Boutique Venue</h5>
+        <p>Waar ons trou!</p>
     </div>
 </section>
 
@@ -416,8 +425,8 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <div class="section-padding">
-                        <h3>Thank you!</h3>
-                        <p>We are glad to see you join us on our big day.</p>
+                        <h3>Baie dankie!</h3>
+                        <p>Sien uit na die groot dag.</p>
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
@@ -425,57 +434,64 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 1st of November '17</p>
-                <form id="rsvp-form" class="rsvp-form"
-                      action=""
-                      method="POST">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
-                                                                     placeholder="Your email"
-                                                                     required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Your name"
-                                                                 required>
-                            </div>
+    <div class="container" style="color: black;">
+        <div class="col-md-6 col-md-offset-3">
+            <h3 style="font-family: 'Arial', sans-serif; font-weight: bold; color: #333; margin-bottom: 20px;">Waarvoor wag u, RSVP nou!</h3>
+            <p style="font-family: 'Arial', sans-serif; color: #666; margin-bottom: 30px;">
+                Ons sal dit baie waardeur as u voor 25 September 2024 sal RSVP.
+            </p>
+            <form id="rsvp-form" class="gform"
+                  action="https://script.google.com/macros/s/AKfycbw9qfwP8o-MkvFgjKhDCo03xI09ZX_j4tXo57ajMHYPb8asKApi-PItJuMp_KpIiCnR/exec"
+                  method="POST" data-email="example@email.net">
+                <div class="row" style="margin-bottom: 20px;">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-input-group">
+                            <i class="fa fa-envelope" style="color: #555; margin-right: 8px;"></i>
+                            <label for="epos" style="font-family: 'Arial', sans-serif; color: #333;">Epos:</label>
+                            <input type="email" id="epos" name="epos" placeholder="Jou epos" required
+                                   style="width: 100%; padding: 10px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc;">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
-                                                                  max="4"
-                                                                  placeholder="Husband/Wife or kids"
-                                                                  required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
-                                                                class="" min="0"
-                                                                placeholder="Invite code"
-                                                                required>
-                            </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-input-group">
+                            <i class="fa fa-user" style="color: #555; margin-right: 8px;"></i>
+                            <label for="naam" style="font-family: 'Arial', sans-serif; color: #333;">Naam:</label>
+                            <input type="text" id="naam" name="naam" placeholder="Jou naam" required
+                                   style="width: 100%; padding: 10px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc;">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12" id="alert-wrapper"></div>
+                </div>
+                <div class="row" style="margin-bottom: 20px;">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-input-group">
+                            <i class="fa fa-users" style="color: #555; margin-right: 8px;"></i>
+                            <label for="ja_nee" style="font-family: 'Arial', sans-serif; color: #333;">Kom u na die troue toe:</label>
+                            <select id="ja_nee" name="ja_nee"
+                                    style="width: 100%; padding: 10px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc;">
+                                <option value="Ja">Ja</option>
+                                <option value="Nee">Nee</option>
+                            </select>
+                        </div>
                     </div>
-                    <button class="btn-fill rsvp-btn">
-                        Yes,
-                        that's me!
-                    </button>
-                </form>
-            </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-input-group">
+                            <i class="fa fa-key" style="color: #555; margin-right: 8px;"></i>
+                            <label for="kode" style="font-family: 'Arial', sans-serif; color: #333;">Kode:</label>
+                            <input type="text" id="kode" name="kode" placeholder="1234" required
+                                   style="width: 100%; padding: 10px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc;">
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="row" style="margin-bottom: 20px;">
+                    <div class="col-md-12" id="alert-wrapper"></div>
+                </div>
+                <button type="submit" class="btn-fill rsvp-btn"
+                        style="background-color: #8e1515; color: white; padding: 12px 20px; border: none; border-radius: 4px; font-family: 'Arial', sans-serif; cursor: pointer;">
+                    Dien in
+                </button>
+            </form>
+        </div>
         </div>
     </div>
 </section>
