--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 Tyd: 16:00 - 00:00
             </p>
             <p>
-                Kleredrag en voorkoms: Formele Aandrag
+                Kleredrag en voorkoms: Formele Aanddrag
             </p>
             <p>
                 Kontant kroeg
