--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <li><a href="#eng-pics">Verlowing</a></li>
                         </ul>
                         <ul class="member-actions">
-                            <li><a href="#map" class="login">Lokaal</a></li>
+                            <li><a href="#map" class="login">Venue</a></li>
                             <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
                         </ul>
                     </nav>
@@ -130,9 +130,7 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.png" class="wp1" style="width: auto; height: auto; position: relative; top: -100px; left: -50px;"></div>
             <div class="col-md-6">
                 <p>
-                    Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n fliek. Ons het in die reën gedans, met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het.
-                    
-                    Na meer as vyf jaar saam, is ons steeds net so verlief soos daardie eerste dag wat Gerhard met kerse en 'n ukulele liefdes liedjie, Tarryn uit gevra het. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielmaats is, en dit vir altyd sal wees.
+                    Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n fliek. Ons het in die reën gedans met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het. Na meer as vyf jaar saam, is ons steeds net so verlief soos daardie eerste dag, met kerse en 'n ukulele liefdesliedjie, toe ons begin uitgaan het. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielsgenote is, en dit vir altyd sal wees.
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.png" class="wp2" style="width: 150%; height: 150%; position: relative; top: -100px; left: -50px;"></div>
@@ -156,13 +154,13 @@
                 Datum: 16 November 2024
             </p>
             <p>
-                Tyd: 16:00 - 00:00
+                Tyd: 16:00
             </p>
             <p>
-                Kleredrag en voorkoms: Formele Aanddrag
+                Kleredrag: Aanddrag
             </p>
             <p>
-                Kontant kroeg
+                Kontantkroeg
             </p>
             <div class="row section-padding">
                     <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
@@ -177,15 +175,15 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <h5 class="modal-title" id="dc-modal-label">Trougeskenkregister</h5>
-                            <p style="color: black; font-size: 16px;">Grootse geskenk is dat julle die dag sal saam ons kom geniet!</p>
-                            <p style="color: black; font-size: 16px;">As u regtig graag ons wil bederf, kan u 'n kontant betaling maak na:</p>
-                        </div>
-                        <div class="modal-body">
-                            <p style="color: black; font-size: 16px;">Account Name: <span id="account-name">MS TARRYN T LOOTS</span></p>
-                            <p style="color: black; font-size: 16px;">Account Number: <span id="account-number">10 17 995 708 0</span></p>
-                            <p style="color: black; font-size: 16px;">Bank: <span id="bank-name">Standard Bank</span></p>
-                            <p style="color: black; font-size: 16px;">Branch Code: <span id="branch-code">7654</span></p>
-                            <p style="color: black; font-size: 16px;">Reference: <span id="reference">Jou naam</span></p>
+                            <p style="color: black; font-size: 16px;"><br>Die grootste geskenk is dat julle die dag saam met ons geniet! As u ons regtig graag wil bederf, kan u 'n kontantbetaling maak na: </p>
+                            <!-- <p style="color: black; font-size: 16px;"></p> -->
+                        <!-- </div>
+                        <div class="modal-body"> -->
+                            <p style="color: black; font-size: 16px;"><span id="account-name">Bankbesonderhede:<br>MS TARRYN T LOOTS<br>10 17 995 708 0<br>Standard Bank<br>7654</span></p>
+                            <!-- <p style="color: black; font-size: 16px;"><span id="account-number">10 17 995 708 0</span></p>
+                            <p style="color: black; font-size: 16px;"><span id="bank-name">Standard Bank</span></p>
+                            <p style="color: black; font-size: 16px;"><span id="branch-code">7654</span></p> -->
+                            <!-- <p style="color: black; font-size: 16px;">Verwysing: <span id="reference">Jou naam</span></p> -->
                             <!-- <button class="btn btn-primary" onclick="copyDetails()">Copy Details</button> -->
                         </div>
                     </div>
@@ -201,7 +199,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header" style="color: #8e1515;">Verlowings fotos</h3>
+                <h3 class="header" style="color: #8e1515;">Verlowingsfoto's</h3>
             </div>
         </div>
         <div class="row">
@@ -341,8 +339,10 @@
                             <!-- <p>Candlewoods Country Estate, Candlewoods Ln, Centurion, Pretoria, 0157</p> -->
                         </div>
                         <div class="col-md-6">
-                            <h5>Mr. Gerhard Maré</h5>
+                            <h5>Gerhard Maré</h5>
                             <p><i class="fa fa-mobile"></i> <a href="tel://+27820411118">+27 820411118</a><br>
+                                <h5>Tarryn Loots</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+27721817934">+27 721817934</a><br>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -381,12 +381,12 @@
 
     <div class="container" style="color: black;">
         <div class="col-md-6 col-md-offset-3">
-            <h3 style="font-family: 'Arial', sans-serif; font-weight: bold; color: #333; margin-bottom: 20px;">Waarvoor wag u? RSVP nou!</h3>
+            <h3 style="font-family: 'Arial', sans-serif; font-weight: bold; color: #333; margin-bottom: 20px;">Ons sien uit. Antwoord nou!</h3>
             <p style="font-family: 'Arial', sans-serif; color: #666; margin-bottom: 30px;">
-                Ons sal dit baie waardeur as u voor 30 September 2024 sal RSVP.
+                Ons sal dit baie waardeer as u voor 30 September 2024 RSVP.
             </p>
             <p style="font-family: 'Arial', sans-serif; color: #8e1515; margin-bottom: 30px;">
-                Vul asseblief die form in, vir elke persoon vir wie u RSVP
+                Vul asseblief die vorm in, vir elke persoon vir wie u RSVP
             </p>
             <form id="rsvp-form" class="gform"
                   action="https://script.google.com/macros/s/AKfycbw9qfwP8o-MkvFgjKhDCo03xI09ZX_j4tXo57ajMHYPb8asKApi-PItJuMp_KpIiCnR/exec"
@@ -457,7 +457,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Gemaak deur Gerhard met baie <span class="fa fa-heart pulse2"></span> vir Tarryn</p>
+                <p>Gerhard <span class="fa fa-heart pulse2"></span> Tarryn</p>
             </div>
         </div>
     </div>
