--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <div class="hero-content text-center">
+                <div class="hero-content text-center" style="width: auto; height: auto; position: relative; top: 100px;">
                     <img src="img/logo-lg.png">
                 </div>
             </div>
@@ -130,7 +130,7 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.png" class="wp1" style="width: auto; height: auto; position: relative; top: -100px; left: -50px;"></div>
             <div class="col-md-6">
                 <p>
-                    Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n fliek. Ons het in die reën gedans met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het. Na meer as vyf jaar saam, is ons steeds net so verlief soos daardie eerste dag, met kerse en 'n ukulele liefdesliedjie, toe ons begin uitgaan het. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielsgenote is, en dit vir altyd sal wees.
+                    Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n rolprent. Ons het in die reën gedans met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het. Na meer as vyf jaar saam, is ons steeds net so verlief soos daardie eerste dag, omring deur kerse met 'n liefdesliedjie op ‘n ukulele  toe ons begin uitgaan het. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielsgenote is, en dit vir altyd sal wees.
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.png" class="wp2" style="width: 150%; height: 150%; position: relative; top: -100px; left: -50px;"></div>
@@ -175,11 +175,11 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <h5 class="modal-title" id="dc-modal-label">Trougeskenkregister</h5>
-                            <p style="color: black; font-size: 16px;"><br>Die grootste geskenk is dat julle die dag saam met ons geniet! As u ons regtig graag wil bederf, kan u 'n kontantbetaling maak na: </p>
+                            <p style="color: black; font-size: 16px;"><br>Die grootste geskenk is dat u die dag saam met ons geniet!<br>As u ons regtig graag wil bederf, kan u hierdie rekening gebruik:</p>
                             <!-- <p style="color: black; font-size: 16px;"></p> -->
                         <!-- </div>
                         <div class="modal-body"> -->
-                            <p style="color: black; font-size: 16px;"><span id="account-name">Bankbesonderhede:<br>MS TARRYN T LOOTS<br>10 17 995 708 0<br>Standard Bank<br>7654</span></p>
+                            <p style="color: black; font-size: 16px;"><span id="account-name">MS TARRYN T LOOTS<br>10 23 006 495 5<br>Standard Bank<br>051001</span></p>
                             <!-- <p style="color: black; font-size: 16px;"><span id="account-number">10 17 995 708 0</span></p>
                             <p style="color: black; font-size: 16px;"><span id="bank-name">Standard Bank</span></p>
                             <p style="color: black; font-size: 16px;"><span id="branch-code">7654</span></p> -->
@@ -254,12 +254,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/ballon_lank.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/ballon_lank.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/ballon_lank.jpg" alt=""/>
+                        <img src="img/eng_pics/ballon_lank.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -386,7 +386,7 @@
                 Ons sal dit baie waardeer as u voor 30 September 2024 RSVP.
             </p>
             <p style="font-family: 'Arial', sans-serif; color: #8e1515; margin-bottom: 30px;">
-                Vul asseblief die vorm in, vir elke persoon vir wie u RSVP
+                Vul asseblief die vorm in, vir elke persoon vir wie u RSVP.
             </p>
             <form id="rsvp-form" class="gform"
                   action="https://script.google.com/macros/s/AKfycbw9qfwP8o-MkvFgjKhDCo03xI09ZX_j4tXo57ajMHYPb8asKApi-PItJuMp_KpIiCnR/exec"
