--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.png" class="wp1" style="width: auto; height: auto; position: relative; top: -100px; left: -50px;"></div>
             <div class="col-md-6">
                 <p>
-                    Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n rolprent. Ons het in die reën gedans met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het. Na meer as vyf jaar saam, is ons steeds net so verlief soos daardie eerste dag, omring deur kerse met 'n liefdesliedjie op ‘n ukulele  toe ons begin uitgaan het. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielsgenote is, en dit vir altyd sal wees.
+                    Van die eerste dag toe ons ontmoet het, was dit soos iets uit 'n rolprent. Ons het in die reën gedans met 'n oorvloed van vreugde wat die wêreld om ons laat verdwyn het. Daardie aand was net die begin van 'n pragtige reis wat ons saam aangepak het. Van spontane avonture tot diep gesprekke, het ons oor die jare 'n liefde opgebou wat al hoe sterker gegroei het. Na meer as vyf jaar saam is ons steeds net so verlief soos daardie eerste dag toe ons begin uitgaan het, omring deur kerse met 'n liefdesliedjie op 'n ukulele. Van ons betowerende verlowing op 'n private lugballonrit oor 'n wildtuin, tot elke klein oomblik wat ons saam deel, is ons liefde 'n vaste anker in ons lewens. Ons sien uit na die reis wat voorlê, hand aan hand, met die wete dat ons mekaar se sielsgenote is, en dit vir altyd sal wees.
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.png" class="wp2" style="width: 150%; height: 150%; position: relative; top: -100px; left: -50px;"></div>
@@ -179,7 +179,7 @@
                             <!-- <p style="color: black; font-size: 16px;"></p> -->
                         <!-- </div>
                         <div class="modal-body"> -->
-                            <p style="color: black; font-size: 16px;"><span id="account-name">MS TARRYN T LOOTS<br>10 23 006 495 5<br>Standard Bank<br>051001</span></p>
+                            <p style="color: black; font-size: 16px;"><span id="account-name">TARRYN LOOTS<br>10 23 006 495 5<br>Standard Bank<br>051001</span></p>
                             <!-- <p style="color: black; font-size: 16px;"><span id="account-number">10 17 995 708 0</span></p>
                             <p style="color: black; font-size: 16px;"><span id="bank-name">Standard Bank</span></p>
                             <p style="color: black; font-size: 16px;"><span id="branch-code">7654</span></p> -->
@@ -214,12 +214,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/ring2.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/ring3.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/ring2.jpg" alt=""/>
+                        <img src="img/eng_pics/ring3.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
