--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Gerhard <span class="fa fa-heart pulse2"></span> Tarryn</p>
+                <p><span class="fa fa-heart pulse2"></span> Gerhard <a href="https://t3.ftcdn.net/jpg/07/57/99/40/360_F_757994037_lQ3F7aFRmdkj1OCuHHUVUdlOJHUPH1oB.jpg" class="fa fa-heart pulse2"></a> Tarryn <span class="fa fa-heart pulse2"></span></p>
             </div>
         </div>
     </div>
