--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/ring3.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/ring.gif">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/ring3.jpeg" alt=""/>
+                        <img src="img/eng_pics/ring.gif" alt=""/>
                     </div>
                 </a>
             </div>
@@ -457,7 +457,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p><span class="fa fa-heart pulse2"></span> Gerhard <a href="https://t3.ftcdn.net/jpg/07/57/99/40/360_F_757994037_lQ3F7aFRmdkj1OCuHHUVUdlOJHUPH1oB.jpg" class="fa fa-heart pulse2"></a> Tarryn <span class="fa fa-heart pulse2"></span></p>
+                <p>Gerhard <a href="https://t3.ftcdn.net/jpg/07/57/99/40/360_F_757994037_lQ3F7aFRmdkj1OCuHHUVUdlOJHUPH1oB.jpg" class="fa fa-heart pulse2" style="color: #8e1515;"></a> Tarryn</p>
             </div>
         </div>
     </div>
