--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.png" class="wp8" style="width: auto; height: auto; position: relative; top: -100px; left: -50px;"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.png" class="wp9" style="width: 150%; height: 150%; position: relative; top: -100px; left: -50px;"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.png" class="wp9" style="width: 150%; height: 150%; position: relative; left: -50px;"></div>
         </div>
     </div>
 </section>
